# Man-following-Robot

./: README.md
drive_man/: CMakeLists.txt  package.xml
drive_man/include/drive_man/: drive_man.h
drive_man/launch/: man_chaser.launch
drive_man/src/: drive_bot.cpp  drive_man.cpp  process_image.cpp
my_robot/: package.xml
my_robot/launch/: robot_description.launch  world.launch
my_robot/meshes/: camera_link.stl  fablab_arena.stl  realsense_link.stl  ultrasonic_front_link.stl  ultrasonic_left_link.stl  ultrasonic_right_link.stl  walk.dae
my_robot/urdf/: ball.gazebo  ball.xacro  moovy.gazebo  moovy.xacro
my_robot/worlds/: fablab_arena.world
